k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: chat-web
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: chat-web
  template:
    metadata:
      labels:
        app: chat-web
    spec:
      containers:
        - name: web
          image: howletcute/chat-app:latest 
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m" 
            limits:
              memory: "256Mi"
              cpu: "250m"
