k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service 
  labels:
    app: chat-web
spec:
  selector:
    app: chat-web 
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 5000
